# clang-tour

./: .gitignore
HelloWorld/: CMakeLists.txt
pyb/: CMakeLists.txt  bindings.cpp  mylibrary.cpp  mylibrary.h
pycpp/: Box.cpp  Box.h  CMakeLists.txt  IHelper.hpp  IHelperSinkImpl.py  bindings.cpp  test.py  test_reflection.py
tmp/: person_data.txt  person_data.xml  serialization.cpp
